--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "firebase": "^5.9.1",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
-    "morgan": "~1.9.0"
+    "moment": "^2.24.0",
+    "morgan": "~1.9.0",
+    "ngrok": "^3.1.1"
   }
 }
